Replaced direct Jakarta CDI interacts with Spring Boot Updated pom.xml to target Java 21 Removed unnecessary deps from pom.xml Added new deps to pom.xml for Spring Boot, MongoDB, JoinFaces, and miscellaneous testing tools Remove JNDI, SQL, H2, etc. files and references in favor MongoDB integrated with Spring Boot Removed unnecessary XML files in favor of what can be encapsulated in Java annotations Removed unnecessary classes Slightly modified local test to leverage Spring Boot testing and an ephemeral MongoDB container (via TestContainers) Slightly modified remote test to 1. be less opinionated on the body of a create being empty and 2. perform cleanup of test entity so that the suite can be run multiple times without manual intervention Miscellaneous additions/substractions to support the move to Spring Boot and Java 21